--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ parso==0.5.1
 pathlib==1.0.1
 pexpect==4.7.0
 pickleshare==0.7.5
+pkg-resources==0.0.0
 prometheus-client==0.7.1
 prompt-toolkit==2.0.10
 ptyprocess==0.6.0
@@ -44,6 +45,7 @@ pyrsistent==0.15.6
 python-dateutil==2.8.1
 pytz==2019.3
 pyzmq==18.1.1
+qtconsole==4.6.0
 regex==2019.11.1
 scikit-learn==0.22
 scipy==1.3.3
@@ -57,4 +59,5 @@ traitlets==4.3.3
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.5.1
+xgboost==0.90
 zipp==0.6.0
