--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ jupyter-client==5.3.4
 jupyter-console==6.0.0
 jupyter-core==4.6.1
 kiwisolver==1.1.0
+lightgbm==2.3.1
 MarkupSafe==1.1.1
 matplotlib==3.0.3
 missingno==0.4.2
